Allow repeat searches, display 'no matches found'

--- a/smarter_book_filter.ipynb
+++ b/smarter_book_filter.ipynb
@@ -95,31 +95,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "94ee443a",
-   "metadata": {},
-   "source": [
-    "## Step 1 : Get the User's Input"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e8e66e9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ask the user for a letter to search for.\n",
-    "# Use .upper() and .strip() so it works even if they enter lowercase or spaces.\n",
-    "# Example: If the user types \" t \", it should become \"T\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8282cc53",
-   "metadata": {},
-   "source": [
-    "## Step 2: Initialize a counter"
+    "# user input a variable that will be the letter to search for\n",
+    "# hint: use .upper() and .strip() to account for improper case or whitespace\n",
+    "while True:\n",
+    "    user_input = input(\"Enter a letter to search for an available book:\").strip()\n",
+    "    letter = user_input.upper()\n",
+    "\n",
+    "    if not letter:\n",
+    "        print(\"No letter entered. Please try again.\")\n",
+    "        continue"
    ]
   },
   {
@@ -129,15 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a variable to keep track of how many books match the search."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e90a8008",
-   "metadata": {},
-   "source": [
-    "## Step 3: Display a header message"
+    "# Track and print matching books:\n",
+    "# First, set a counter variable called match_count\n",
+    "match_count = 0"
    ]
   },
   {
@@ -147,16 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print a friendly message before listing the results. (Just run this cell, no need to make changes)\n",
-    "print(f\"\\nBooks starting with {letter} that are Available:\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38ae8116",
-   "metadata": {},
-   "source": [
-    "## Step 4: Search through the dictionary"
+    "print(f\"\\n Books starting with {letter} that are Available: \")"
    ]
   },
   {
@@ -166,18 +141,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop through the book dictionary to check each title.\n",
-    "# Example: for title, status in library.items():\n",
-    "# If the title starts with the chosen letter and the status is \"Available\",\n",
-    "# print the title and increase match_count by 1."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f69b543",
-   "metadata": {},
-   "source": [
-    "## Step 5: Show total matches"
+    "# write a for loop that prints all book titles starting with letter that are Available\n",
+    "# hint: you are now accessing both the keys and their values, so you'll need to use library.items()\n",
+    "# don't forget to increase your match_count at the end!\n",
+    "\n",
+    "\n",
+    "\n",
+    "for title, status in library.items():\n",
+    "    if status == \"Available\" and title.upper .startswith(letter):\n",
+    "        print(title)\n",
+    "        match_count += 1"
    ]
   },
   {
@@ -187,7 +160,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# After the loop, print how many books matched."
+    "# Print total matches\n",
+    "print(f\"\\nTotal matches: {match_count}\")\n",
+    "if match_count == 0:\n",
+    "    print(\"No matches found. \\n\")"
    ]
   },
   {
