--- a/smarter_book_filter.ipynb
+++ b/smarter_book_filter.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4c9d94ce",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "457e82ad",
    "metadata": {},
    "outputs": [
@@ -96,25 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e8e66e9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# user input a variable that will be the letter to search for\n",
     "# hint: use .upper() and .strip() to account for improper case or whitespace\n",
-    "while True:\n",
-    "    user_input = input(\"Enter a letter to search for an available book:\").strip()\n",
-    "    letter = user_input.upper()\n",
-    "\n",
-    "    if not letter:\n",
-    "        print(\"No letter entered. Please try again.\")\n",
-    "        continue"
+    "user_input = input(\"Enter a letter to search for an available book:\").strip()\n",
+    "letter = user_input.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d43dc487",
    "metadata": {},
    "outputs": [],
@@ -126,17 +121,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "2f25ac31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Books starting with D that are Available: \n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\\n Books starting with {letter} that are Available: \")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9171b138",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d72e5d27",
    "metadata": {},
    "outputs": [],
@@ -144,21 +154,29 @@
     "# write a for loop that prints all book titles starting with letter that are Available\n",
     "# hint: you are now accessing both the keys and their values, so you'll need to use library.items()\n",
     "# don't forget to increase your match_count at the end!\n",
-    "\n",
-    "\n",
-    "\n",
     "for title, status in library.items():\n",
-    "    if status == \"Available\" and title.upper .startswith(letter):\n",
+    "    if status == \"Available\" and title.upper().startswith(letter):\n",
     "        print(title)\n",
     "        match_count += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6a4b6b15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total matches: 0\n",
+      "No matches found. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print total matches\n",
     "print(f\"\\nTotal matches: {match_count}\")\n",
